@@ -18,80 +18,35 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>net.officefloor.web</groupId>
-			<artifactId>woof</artifactId>
+			<groupId>net.officefloor.cloud</groupId>
+			<artifactId>officecloud</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>net.officefloor.cabinet</groupId>
-			<artifactId>officecabinet</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>net.officefloor.web</groupId>
-			<artifactId>woof_test</artifactId>
+			<groupId>net.officefloor.cloud</groupId>
+			<artifactId>officecloud_test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.officefloor.cabinet</groupId>
-			<artifactId>officecabinet_inmemory</artifactId>
+			<groupId>net.officefloor.cloud</groupId>
+			<artifactId>officecloud_aws_test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter</artifactId>
+			<groupId>net.officefloor.cloud</groupId>
+			<artifactId>officecloud_google_test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
-				<!-- Standard JVM for compilation -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${compiler-version}</version>
-				<configuration>
-					<source>${java-lowest-version}</source>
-					<target>${java-lowest-version}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<!-- Run integrations -->
-				<groupId>net.officefloor.maven</groupId>
-				<artifactId>officefloor-maven-plugin</artifactId>
-				<version>${officefloor-version}</version>
-				<executions>
-					<execution>
-						<id>open</id>
-						<goals>
-							<goal>open</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>close</id>
-						<goals>
-							<goal>close</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<!-- Run integration tests -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>${failsafe-version}</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${surefire-version}</version>
 				<configuration>
+					<argLine>--add-opens
+						java.base/java.lang=ALL-UNNAMED --add-opens
+						java.base/java.util=ALL-UNNAMED</argLine>
 					<!-- Fix for SUREFIRE-1588 -->
 					<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
